# Lunchify2.0

./: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  DEVELOPMENT.md  Dockerfile  GENERATION_SUMMARY.md  INDEX.md  PROJECT_CHECKLIST.md  QUICKSTART.md  README.md  check-quality.sh  database.db  docker-compose.yml  main.py  migrate.sh  pyproject.toml  requirements.txt  run-tests.sh  start.sh
alembic/: alembic.ini  env.py
alembic/versions/: .keep  001_initial_orders.py  1df86f1badd5_add_updated_at_column_to_menu.py
app/: __init__.py  main.py
app/api/v1/: menu.py  order.py
app/api/v1/orders/: router.py  schemas.py
app/cache/: __init__.py  redis_cache.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/db/: __init__.py  models.py  session.py  sessions.py
app/domain/order/: __init__.py  entity.py  exceptions.py  value_objects.py
app/helpers/: convert_date_to_str.py
app/helpers/internal/: calculate_total_price.py
app/infrastructure/: __init__.py
app/infrastructure/repositories/: __init__.py
app/infrastructure/repositories/order/: __init__.py  sqlalchemy_repository.py
app/repos/menus/: menu.py  menus_crud.py
app/repos/orders/: order.py
app/repositories/: __init__.py
app/repositories/order/: __init__.py  interface.py
app/schemas/: menu_schemas.py  order_schemas.py
app/services/: menu_service.py  order_service.py
app/services/order/: __init__.py  service.py
tests/: __init__.py  conftest.py  test_order_api.py  test_order_service.py
