[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunchify-backend"
version = "0.1.0"
description = "Production-ready FastAPI backend with clean architecture"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Lunchify Team", email = "team@lunchify.dev"}
]

dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.24",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "redis==5.0.1",
    "fastapi-limiter==0.1.5",
    "python-dotenv==1.0.0",
    "structlog==24.1.0",
    "httpx==0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.23.2",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "ruff==0.1.11",
    "mypy==1.7.1",
    "httpx==0.25.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E", "F", "W", "I", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
